--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
 
-  <link rel="shortcut icon" href="./favicon.png">
+  <link rel="shortcut icon" href="/favicon.31b65a3d.png">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/instantsearch.css@7/themes/satellite-min.css">
-  <link rel="stylesheet" href="./src/index.css">
-  <link rel="stylesheet" href="./src/app.css">
+  <link rel="stylesheet" href="/index.61d3354a.css">
+  <link rel="stylesheet" href="/index.4a5519d3.css">
 
   <title>boseman-telco</title>
 </head>
@@ -22,7 +22,7 @@
     </h1>
     <p class="header-subtitle">
       Product Search
-      </a>
+      
     </p>
   </header>
 
@@ -47,7 +47,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/algoliasearch@4.10.5/dist/algoliasearch-lite.umd.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/instantsearch.js@4.62.0"></script>
-  <script src="./src/app.js"></script>
-</body>
+  <script src="/index.816e7b21.js"></script>
+<script src="/boseman-telco.3464ddca.js"></script></body>
 
 </html>
